  burden (particularly on Ubuntu), and because the URL shortening
  functionality has been made redundant by the advent of third-party URL
  shorteners.
- Use transactions when importing tab-delimited data to allow a rollback in
  the event of an error. The MySQL schema now specifies the InnoDB storage
  engine for transaction support.

1.01

- Modified the insert_feature_correspondence() method to allow correspondences
  between relational maps (this was done for speed).  The check to make sure
  that no correspondences are made between relational maps has been moved to
  MakeCorrespondences.pm.
- Significantly, increased the speed of inserting features by removing the numeric check on 
  the feature_stop value.
- Added a Bio::DB::SeqFeature::Store adaptor to allow GFF3 to be imported into
  CMap.  This GFF3 has extra pragma to define objects such as species and map
  sets.
- Added a module to output CMap style GFF3.
- For developers: To allow getting feature ids for features inserted in bulk,
  added a flag to the Generic.pm method insert_feature() to return an index
  into an array that is then returned when features are inserted.
- Added a module to serve data to CMap3D, a 3D viewer being developed by Chris
  Duran and Dave Edwards.

1.0

- Added three new feature glyphs: heatmap, i_beam and bar.
- Added a feature that will stack comparative maps in real time.
- Added a dot-plot view.
- Added a ribbon glyph for correspondences
- Added the unused feature types into the legend, colored grey with a little +
  box which will add them to the display.
- Added an image_only parameter that will cause CMap to only return the htmp
  tag pointing to the image.
- Added the ability to define additional buttons in the config file that will
  be displayed only when certain criteria are met.  These buttons will change
  parameters in the menu and submit.
- Added the ability to define the default species that a new user will have